# EconoSuite

./: .gitignore  EconoSuite_Master_Architecture.md  EconoSuite_R_Manual.md  README.md  download_cran.py  download_cran_advanced.py  download_cran_extras.py  download_cran_micro.py  download_cran_np_mcmc.py  download_cran_trade.py  download_cran_viz.py  download_guidelines.py  download_macro_apis.py  install_econ_packages.R  pyproject.toml  test_methods.py
data/guideline/: International_Trade_Terminology.md  Keith_Head_Introduction_Formula.md  McCloskey_Economical_Writing_Summary.md
docs/: .pdca-status.json
docs/01-plan/features/: econosuite-foundation-port.plan.md  econosuite_antigravity_daemon_evaluation_report.md  econosuite_master_plan.md
docs/subagents/: bkend-expert.md  econo-expert.md  hema-expert.md  index.md
econosuite/: builder.py  cli.py  integrator.py  mcp_server.py  notebook.py  validator.py  watcher.py
econosuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
econosuite/engine/: __init__.py  _patterns.py  block_store.py  dag.py  double_lock.py  plugin.py  run_adapter.py  strategy.py  unified_engine.py
econosuite/engine/plugins/: __init__.py  csa_plugin.py
econosuite/engine/strategies/: manuscript-imrad.json  manuscript-systematic-review.json  protocol-phase2.json  (+2 more)
econosuite/phases/: phase_manager.py
templates/: 신진연구자지원사업.hwp
test_paper/: 01_introduction.md  02_data.md  03_methodology.md  04_results.md  05_conclusion.md
test_workflow/: 01_background.md  02_method.md  03_results.md  04_discussion.md
(+4 files in other folders)
